tion.
==================================CHANGELOG=================================
09/17/2025:
[+] Added Pokémon Red, Blue, and Yellow (Thanks for the suggestion!)
[+] Added Basketbros (Thanks for the suggestion Griffin!)
[+] Added Whack Your Ex (Thanks for the suggestion!)
[+] Added Grand Theft Auto Advanced
[+] Fixed 1 on 1 Basketball

09/16/2025:
[+] Added the survey annoucement. (if you haven't already, please take the
survey, it really does help) This is only temporary and will be removed once
enough responses are collected.

09/13/2025:
[+] Added Ragdoll Archers (Thanks for the suggestion Kaden!)
[+] Re-added There is No Game
[+] Fixed the Soccer Random image being Snailbob 5.
[+] Emulated Games are here! Please don't sue me!
[+] Added Super Mario 64 [N64]
[+] Added Mario Kart 64 [N64]
[+] Added Doom 64 [N64]
[+] Added Super Smash Bros [N64]
[+] Added Pokemon Stadium [N64]
[+] Added Street Fighter II Turbo [SNES]
[+] Added Welcome to Animal Crossing: Wild World [NDS]
[+] Added Lego Star Wars: The Video Game [GBA]
[!] Please suggest any emulated games you'd like to see next on the
suggestions form! Suggestions are greatly appreciated :)

09/12/2025:
[+] Added Funny Shooter 2 (Thanks for the suggestion!)

09/10/2025:
[!] Sorry for all the broken games. A lot of the games broke during the time
I was gone. I have fixed most of them though.
[+] Fixed Duck Life 1-4
[+] Fixed Ace Gangster Taxi
[+] Fixed Bad Ice Cream
[+] Fixed Pac Man
[+] Fixed Bad Time Simulator
[+] Fixed Bloons Tower Defense 1 & 3
[+] Fixed Bob the Robber 2
[+] Fixed Bottle Flip
[-] Removed Chick End (Couldn't find a backup sorry)
[-] Removed Cookie Clicker
[+] Fixed Fly or Die
[+] Fixed a bunch of other games, not gonna list them all

09/09/2025:
[+] Big update to the UI.
[+] Added categories (will do more with this later)
[-] Removed tab styles (these weren't used and have been broken forever)
[+] Added Subway Surfers (This took forever to get done. I finally did it)