@@ -1,0 +1,6 @@
+09/17/2025:
+[+] Added Pokémon Red, Blue, and Yellow (Thanks for the suggestion!)
+[+] Added Basketbros (Thanks for the suggestion Griffin!)
+[+] Added Whack Your Ex (Thanks for the suggestion!)
+[+] Added Grand Theft Auto Advanced
+[+] Fixed 1 on 1 Basketball
